<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".FilterPickerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Start Date:"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_start_date"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/start_date"
            android:inputType="none"
            android:onClick="openDatePickerDialog"
            android:singleLine="true"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="End Date:"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_end_date"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/end_date"
            android:inputType="none"
            android:onClick="openDatePickerDialog"
            android:singleLine="true"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_filter_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button_filter_finish"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish" />
    </LinearLayout>
</LinearLayout>